Prevent pushing updates to Sync Clippings sync file if maximum sync data size is exceeded
(issue #527)
- Implemented for Clippings Manager

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -1026,6 +1026,7 @@ body[data-os="win"] .browser-style > input[type="checkbox"] + label {
 #move-sync-fldr-msgbox,
 #delete-sync-fldr-msgbox,
 #show-only-synced-items-reminder,
+#sync-fldr-full-error-msgbox,
 #generic-msg-box {
     top: 64px;
 }
@@ -1433,7 +1434,8 @@ body[data-locale="uk"] #include-src-urls + label {
 #import-confirm-msgbox > .msgbox-icon,
 #export-confirm-msgbox > .msgbox-icon,
 #backup-confirm-msgbox > .msgbox-icon,
-#reload-sync-fldr-msgbox > .msgbox-icon {
+#reload-sync-fldr-msgbox > .msgbox-icon,
+#sync-fldr-full-error-msgbox > .msgbox-icon {
     margin-top: 8px;
 }
 
